@@ -1,3 +1,8 @@
+5/12/2010
+	- Add support for determining resolver configuration on
+	  Japanese Windows.  (translation and original patch from
+	  Brett Wooldridge <brettw@users.sourceforge.net>)
+
 5/6/2010
 	- Add support for building an OSGi bundle (patch from
 	  Markus Alexander Kuppe <lemmster@users.sourceforge.net>).
